// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be TextArea render correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <View
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#5D6A75",
          "borderRadius": 4,
          "display": "flex",
          "flexDirection": "row",
          "marginVertical": 4,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Array [
          Object {
            "borderWidth": 1,
            "height": 140,
          },
        ],
      ]
    }
    testID="Box"
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      numberOfLines={7}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#5D6A75"
      rejectResponderTermination={true}
      selectionColor="#5D6A75"
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "fontFamily": "\\"Inter\\", sans-serif",
            "textAlignVertical": "top",
          },
        ]
      }
      testID="Input"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        Array [
          Object {},
        ],
      ]
    }
    testID="Box"
  />
</RCTSafeAreaView>
`;

exports[`should have a error feedback 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3338",
          "display": "flex",
          "fontFamily": "\\"Inter\\", sans-serif",
          "fontWeight": "700",
        },
        Array [
          Object {
            "fontSize": 14,
          },
        ],
      ]
    }
  >
    Label do TextArea
  </Text>
  <View
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#E20A0A",
          "borderRadius": 4,
          "display": "flex",
          "flexDirection": "row",
          "marginVertical": 4,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Array [
          Object {
            "borderWidth": 2,
            "height": 140,
          },
        ],
      ]
    }
    testID="Box"
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      numberOfLines={7}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#5D6A75"
      rejectResponderTermination={true}
      selectionColor="#5D6A75"
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "fontFamily": "\\"Inter\\", sans-serif",
            "textAlignVertical": "top",
          },
        ]
      }
      testID="Input"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        Array [
          Object {},
        ],
      ]
    }
    testID="Box"
  />
</RCTSafeAreaView>
`;

exports[`should have a success feedback 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3338",
          "display": "flex",
          "fontFamily": "\\"Inter\\", sans-serif",
          "fontWeight": "700",
        },
        Array [
          Object {
            "fontSize": 14,
          },
        ],
      ]
    }
  >
    Label do TextArea
  </Text>
  <View
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#00B649",
          "borderRadius": 4,
          "display": "flex",
          "flexDirection": "row",
          "marginVertical": 4,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Array [
          Object {
            "borderWidth": 2,
            "height": 140,
          },
        ],
      ]
    }
    testID="Box"
  >
    <TextInput
      allowFontScaling={true}
      multiline={true}
      numberOfLines={7}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#5D6A75"
      rejectResponderTermination={true}
      selectionColor="#5D6A75"
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "fontFamily": "\\"Inter\\", sans-serif",
            "textAlignVertical": "top",
          },
        ]
      }
      testID="Input"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
        Array [
          Object {},
        ],
      ]
    }
    testID="Box"
  />
</RCTSafeAreaView>
`;
